--- a/README.textile
+++ b/README.textile
@@ -181,7 +181,7 @@ h1. License
 <pre>
 This software is licensed under the Apache License, version 2 ("ALv2"), quoted below.
 
-Copyright 2009-2015 Elasticsearch <http://www.elasticsearch.org>
+Copyright 2009-2015 Mandrel
 
 Licensed under the Apache License, Version 2.0 (the "License"); you may not
 use this file except in compliance with the License. You may obtain a copy of
